# object-detection-yolo-deepsort

./: .gitignore  Dockerfile  Makefile  README.md  container.json  main.py  publishProfile.xml  pyproject.toml  requirements.txt  setup.sh  webapp.py
.github/workflows/: build-and-deploy.yml  deploy.yml
deep_sort/deep_sort/: linear_assignment.py
deep_sort/tools/: generate_detections.py
demo/: README.md
scripts/: test_docker.sh
static/js/: app.js
templates/: demos.html  index.html
